collapsed comments padding changed to line up with uncollapsed comments. Fixes #39

--- a/css/threads.css
+++ b/css/threads.css
@@ -210,7 +210,7 @@ html .comment .comment .comment .comment .comment .comment .comment .comment .co
 /* Collapsible Comments */
 
 .comment .collapsed {
-    padding: 9px 0 10px 67px;
+    padding: 0px 0 10px 29px;
     }
 .collapsed .flair {
     display:inline-block;
